This implements a way to become more independent from the plplot drivers: we just use our owns. At the moment it is a copy of the plplot drivers, as it is just to avoid using the slow and buggy 'new' wxwidgets driver, but the idea is to eventually improve some drivers (the 'mem' driver or the X11 driver could become scalable font aware for example)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
           path: ${{ runner.temp }}/cache
           key: cache-gdl-deps-${{ matrix.os }}-v4
       - name: Install Dependencies (macOS, Homebrew)
-        if: contains(matrix.os, 'macos')
+        if: contains(matrix.os, 'macos')                    # && steps.cache.outputs.cache-hit != 'true'  #removed as the cached state is bad.
         run: |
           find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot1.txt
           scripts/build_gdl.sh prep
