GitHub actions fixes.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,14 +80,15 @@ jobs:
       - name: Install Dependencies (macOS, Homebrew)
         if: contains(matrix.os, 'macos')                    # && steps.cache.outputs.cache-hit != 'true'  #removed as the cached state is bad.
         run: |
-          find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot1.txt
+          find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort -o ~/snapshot1.txt
           scripts/build_gdl.sh prep
-          find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot2.txt
+          find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort -o ~/snapshot2.txt
           echo "Setting up cache..."
+          rm -rf ${{ runner.temp }}/cache
           mkdir -p ${{ runner.temp }}/cache
-          for fn in $(comm -13 ~/snapshot1.txt ~/snapshot2.txt); do
-            rsync -aR ${fn} ${{ runner.temp }}/cache || true
-          done
+          while IFS= read -r fn; do
+            rsync -aR "${fn}" ${{ runner.temp }}/cache
+          done < <(comm -13 ~/snapshot1.txt ~/snapshot2.txt)
       - name: Install Dependencies (Linux, Apt)
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -95,10 +96,13 @@ jobs:
       - name: Restore cache (macOS, Homebrew)
         if: contains(matrix.os, 'macos') && steps.cache.outputs.cache-hit == 'true'
         run: |
-          cd ${{ runner.temp }}
-          for d in `ls cache`; do
-            sudo rsync -rt --links --no-t --inplace cache/$d/ /$d
-          done
+          echo "Checking cache..."
+          if cd ${{ runner.temp }}/cache; then
+            echo "Extracting cache..."
+            while IFS= read -r fn; do
+              rsync -aR "${fn}" /
+            done < <(find -- * -maxdepth 0 -type d)
+          fi
       - name: Build GDL
         run: |
           scripts/build_gdl.sh configure
@@ -168,6 +172,7 @@ jobs:
             make
             git
             rsync
+            patch
       - name: Checkout GDL
         uses: actions/checkout@v2
       - name: Cache Dependencies
