--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1035,7 +1035,7 @@ endif(NOT PYTHON_MODULE)
 install(FILES ${CMAKE_SOURCE_DIR}/AUTHORS ${CMAKE_SOURCE_DIR}/README DESTINATION ${CMAKE_INSTALL_PREFIX}/${GDL_DATA_DIR})
 install(FILES ${CMAKE_SOURCE_DIR}/doc/gdl.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
 
-# substitute variables in configure.h.cmake and move it to configure.h
+# substitute variables in config.h.cmake and move it to config.h
 configure_file(${CMAKE_SOURCE_DIR}/config.h.cmake ${CMAKE_BINARY_DIR}/config.h)
 
 # display macro
