--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1081,7 +1081,8 @@ endif(MSVC)
 if(CMAKE_BUILD_TYPE STREQUAL None OR NOT CMAKE_BUILD_TYPE)
     set(FLAGS ${CMAKE_CXX_FLAGS})
 elseif(CMAKE_BUILD_TYPE STREQUAL Debug)
-    set(FLAGS ${CMAKE_CXX_FLAGS_DEBUG})
+    # set(FLAGS ${CMAKE_CXX_FLAGS_DEBUG})
+    set(FLAGS "-O1 -g") # fix for 'file too big'
 elseif(CMAKE_BUILD_TYPE STREQUAL Release)
     set(FLAGS ${CMAKE_CXX_FLAGS_RELEASE})
 elseif(CMAKE_BUILD_TYPE STREQUAL RelWithDebInfo)
